--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,6 @@
         "phpunit/phpunit": "^9.0"
     },
     "minimum-stability": "stable",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "version": "1.1.0"
 }
